Fix graph controls not showing tracks

--- a/.theme/graph.scss
+++ b/.theme/graph.scss
@@ -17,7 +17,7 @@ GRAPH CONTROLS */
 }
 
 .theme-dark .graph-controls {
-  background-color: var(--background-secondary-alt);
+  background-color: var(--background-tertiary);
   border: none;
 }
 
